--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "svelte-preprocess-import-assets": "^1.1.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2"
+    "vite": "^4.4.2",
+    "vite-plugin-svelte-svg": "^2.3.0"
   },
   "type": "module",
   "dependencies": {
